--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,11 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.1.RELEASE')
+	implementation('org.springframework.security:spring-security-oauth2-client')
 	implementation('de.codecentric:spring-boot-admin-starter-client')
 	implementation('de.codecentric:spring-boot-admin-starter-server')
-	runtimeOnly('com.h2database:h2')
+	implementation('io.jsonwebtoken:jjwt:0.9.1')
+	implementation('mysql:mysql-connector-java')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
 	testImplementation('org.springframework.security:spring-security-test')
